[package]
authors = ["vaibhav"]
edition = "2018"
name = "hacker-clone"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
diesel = {version = "*", features = ["postgres"]}
dotenv = "*"
serde = "*"
tera = "*"
